--- a/test/test_services/tfm_core_test/manifest.yaml
+++ b/test/test_services/tfm_core_test/manifest.yaml
@@ -21,25 +21,25 @@
   ],
   "secure_functions": [
     {
-      "sfid": "TFM_CORE_TEST_SFN_SFID",
+      "name": "TFM_CORE_TEST_SFN",
       "signal": "SPM_CORE_TEST_SFN",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
     },
     {
-      "sfid": "TFM_CORE_TEST_SFN_INIT_SUCCESS_SFID",
+      "name": "TFM_CORE_TEST_SFN_INIT_SUCCESS",
       "signal": "SPM_CORE_TEST_SFN_INIT_SUCCESS",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
     },
     {
-      "sfid": "TFM_CORE_TEST_SFN_DIRECT_RECURSION_SFID",
+      "name": "TFM_CORE_TEST_SFN_DIRECT_RECURSION",
       "signal": "SPM_CORE_TEST_SFN_DIRECT_RECURSION",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
     }
   ],
   "linker_pattern": {
@@ -49,7 +49,7 @@
   },
   "services": [
     {
-      "name": "SPM_CORE_TEST_INIT_SUCCESS_SID",
+      "name": "SPM_CORE_TEST_INIT_SUCCESS",
       "sid": "0x00002100",
       "signal": "SPM_CORE_TEST_INIT_SUCCESS_SIGNAL",
       "non_secure_clients": "true",
@@ -57,7 +57,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_DIRECT_RECURSION_SID",
+      "name": "SPM_CORE_TEST_DIRECT_RECURSION",
       "sid": "0x00002101",
       "signal": "SPM_CORE_TEST_DIRECT_RECURSION_SIGNAL",
       "non_secure_clients": "true",
@@ -65,7 +65,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_MPU_ACCESS_SID",
+      "name": "SPM_CORE_TEST_MPU_ACCESS",
       "sid": "0x00002102",
       "signal": "SPM_CORE_TEST_MPU_ACCESS_SIGNAL",
       "non_secure_clients": "true",
@@ -73,7 +73,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_MEMORY_PERMISSIONS_SID",
+      "name": "SPM_CORE_TEST_MEMORY_PERMISSIONS",
       "sid": "0x00002103",
       "signal": "SPM_CORE_TEST_MEMORY_PERMISSIONS_SIGNAL",
       "non_secure_clients": "true",
@@ -81,7 +81,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_SHARE_REDIRECTION_SID",
+      "name": "SPM_CORE_TEST_SHARE_REDIRECTION",
       "sid": "0x00002104",
       "signal": "SPM_CORE_TEST_SHARE_REDIRECTION_SIGNAL",
       "non_secure_clients": "true",
@@ -89,7 +89,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_SS_TO_SS_SID",
+      "name": "SPM_CORE_TEST_SS_TO_SS",
       "sid": "0x00002105",
       "signal": "SPM_CORE_TEST_SS_TO_SS_SIGNAL",
       "non_secure_clients": "true",
@@ -97,7 +97,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_SS_TO_SS_BUFFER_SID",
+      "name": "SPM_CORE_TEST_SS_TO_SS_BUFFER",
       "sid": "0x00002106",
       "signal": "SPM_CORE_TEST_SS_TO_SS_BUFFER_SIGNAL",
       "non_secure_clients": "true",
@@ -105,7 +105,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_OUTVEC_WRITE_SID",
+      "name": "SPM_CORE_TEST_OUTVEC_WRITE",
       "sid": "0x00002107",
       "signal": "SPM_CORE_TEST_OUTVEC_WRITE_SIGNAL",
       "non_secure_clients": "true",
@@ -113,7 +113,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_PERIPHERAL_ACCESS_SID",
+      "name": "SPM_CORE_TEST_PERIPHERAL_ACCESS",
       "sid": "0x00002108",
       "signal": "SPM_CORE_TEST_PERIPHERAL_ACCESS_SIGNAL",
       "non_secure_clients": "true",
@@ -121,7 +121,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID_SID",
+      "name": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID",
       "sid": "0x00002109",
       "signal": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID_SIGNAL",
       "non_secure_clients": "true",
@@ -129,7 +129,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_SPM_REQUEST_SID",
+      "name": "SPM_CORE_TEST_SPM_REQUEST",
       "sid": "0x0000210A",
       "signal": "SPM_CORE_TEST_SPM_REQUEST_SIGNAL",
       "non_secure_clients": "true",
@@ -137,7 +137,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_BLOCK_SID",
+      "name": "SPM_CORE_TEST_BLOCK",
       "sid": "0x0000210B",
       "signal": "SPM_CORE_TEST_BLOCK_SIGNAL",
       "non_secure_clients": "true",
@@ -145,7 +145,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "SPM_CORE_TEST_NS_THREAD_SID",
+      "name": "SPM_CORE_TEST_NS_THREAD",
       "sid": "0x0000210C",
       "signal": "SPM_CORE_TEST_NS_THREAD_SIGNAL",
       "non_secure_clients": "true",
