--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -15,18 +15,20 @@
   "heap_size": "0x0400",
   "secure_functions": [
     {
-      "sfid": "TFM_ATTEST_GET_TOKEN_SFID",
+      "name": "TFM_ATTEST_GET_TOKEN",
       "signal": "INITIAL_ATTEST_GET_TOKEN",
+      "sid": "0x00000020",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
     },
     {
-      "sfid": "TFM_ATTEST_GET_TOKEN_SIZE_SFID",
+      "name": "TFM_ATTEST_GET_TOKEN_SIZE",
       "signal": "INITIAL_ATTEST_GET_TOKEN_SIZE",
+      "sid": "0x00000021",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
     }
   ],
   "linker_pattern": {
@@ -36,7 +38,7 @@
   },
   "services": [
     {
-      "name": "TFM_ATTEST_GET_TOKEN_SID",
+      "name": "TFM_ATTEST_GET_TOKEN",
       "sid": "0x00000020",
       "signal": "PSA_ATTEST_GET_TOKEN_SIG",
       "non_secure_clients": "true",
@@ -44,7 +46,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "TFM_ATTEST_GET_TOKEN_SIZE_SID",
+      "name": "TFM_ATTEST_GET_TOKEN_SIZE",
       "sid": "0x00000021",
       "signal": "PSA_ATTEST_GET_TOKEN_SIZE_SIG",
       "non_secure_clients": "true",
