--- a/secure_fw/services/platform/manifest.yaml
+++ b/secure_fw/services/platform/manifest.yaml
@@ -15,18 +15,20 @@
   "heap_size": "0x0400",
   "secure_functions": [
     {
-      "sfid": "TFM_SP_PLATFORM_SYSTEM_RESET_SFID",
+      "name": "TFM_SP_PLATFORM_SYSTEM_RESET",
       "signal": "PLATFORM_SP_SYSTEM_RESET",
+      "sid": "0x00000040",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
     },
     {
-      "sfid": "TFM_SP_PLATFORM_IOCTL_SFID",
+      "name": "TFM_SP_PLATFORM_IOCTL",
       "signal": "PLATFORM_SP_IOCTL",
+      "sid": "0x00000041",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
      }
   ],
   "linker_pattern": {
