--- a/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
+++ b/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
@@ -17,7 +17,7 @@
   ],
   "services" : [
     {
-      "name": "IPC_CLIENT_TEST_BASIC_SID",
+      "name": "IPC_CLIENT_TEST_BASIC",
       "sid": "0x00001100",
       "signal": "IPC_CLIENT_TEST_BASIC_SIGNAL",
       "non_secure_clients": "true",
@@ -25,7 +25,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_MEM_SID",
+      "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_MEM",
       "sid": "0x00001101",
       "signal": "IPC_CLIENT_TEST_PSA_ACCESS_APP_MEM_SIGNAL",
       "non_secure_clients": "true",
@@ -33,7 +33,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SID",
+      "name": "IPC_CLIENT_TEST_PSA_ACCESS_APP_READ_ONLY_MEM",
       "sid": "0x00001102",
       "signal": "IPC_CLIENT_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SIGNAL",
       "non_secure_clients": "true",
@@ -41,7 +41,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "IPC_CLIENT_TEST_APP_ACCESS_PSA_MEM_SID",
+      "name": "IPC_CLIENT_TEST_APP_ACCESS_PSA_MEM",
       "sid": "0x00001103",
       "signal": "IPC_CLIENT_TEST_APP_ACCESS_PSA_MEM_SIGNAL",
       "non_secure_clients": "true",
@@ -49,7 +49,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "IPC_CLIENT_TEST_MEM_CHECK_SID",
+      "name": "IPC_CLIENT_TEST_MEM_CHECK",
       "sid": "0x00001104",
       "signal": "IPC_CLIENT_TEST_MEM_CHECK_SIGNAL",
       "non_secure_clients": "true",
