--- a/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
+++ b/test/test_services/tfm_ipc_service/tfm_ipc_service_partition.yaml
@@ -17,7 +17,7 @@
   ],
   "services" : [
     {
-      "name": "IPC_SERVICE_TEST_BASIC_SID",
+      "name": "IPC_SERVICE_TEST_BASIC",
       "sid": "0x00001000",
       "signal": "IPC_SERVICE_TEST_BASIC_SIGNAL",
       "non_secure_clients": "true",
@@ -25,7 +25,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_MEM_SID",
+      "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_MEM",
       "sid": "0x00001001",
       "signal": "IPC_SERVICE_TEST_PSA_ACCESS_APP_MEM_SIGNAL",
       "non_secure_clients": "true",
@@ -33,7 +33,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SID",
+      "name": "IPC_SERVICE_TEST_PSA_ACCESS_APP_READ_ONLY_MEM",
       "sid": "0x00001002",
       "signal": "IPC_SERVICE_TEST_PSA_ACCESS_APP_READ_ONLY_MEM_SIGNAL",
       "non_secure_clients": "true",
@@ -41,7 +41,7 @@
       "minor_policy": "STRICT"
     },
     {
-      "name": "IPC_SERVICE_TEST_APP_ACCESS_PSA_MEM_SID",
+      "name": "IPC_SERVICE_TEST_APP_ACCESS_PSA_MEM",
       "sid": "0x00001003",
       "signal": "IPC_SERVICE_TEST_APP_ACCESS_PSA_MEM_SIGNAL",
       "non_secure_clients": "true",
