--- a/test/test_services/tfm_secure_client_service/manifest.yaml
+++ b/test/test_services/tfm_secure_client_service/manifest.yaml
@@ -21,16 +21,16 @@
   ],
   "secure_functions": [
     {
-      "sfid": "TFM_SECURE_CLIENT_SFN_RUN_TESTS_SFID",
+      "name": "TFM_SECURE_CLIENT_SFN_RUN_TESTS",
       "signal": "TFM_SECURE_CLIENT_SERVICE_SFN_RUN_TESTS",
       "non_secure_clients": true,
       "minor_version": 1,
-      "minor_policy": "strict"
+      "minor_policy": "STRICT"
     },
   ],
   "services": [
     {
-      "name": "TFM_SECURE_CLIENT_SFN_RUN_TESTS_SID",
+      "name": "TFM_SECURE_CLIENT_SFN_RUN_TESTS",
       "sid": "0x0000F000",
       "signal": "TFM_SECURE_CLIENT_SFN_RUN_TESTS_SIG",
       "non_secure_clients": "true",
