--- a/test/test_services/tfm_irq_test_service_1/manifest.yaml
+++ b/test/test_services/tfm_irq_test_service_1/manifest.yaml
@@ -58,7 +58,7 @@
   "services": [
     {
     "name": "SPM_CORE_IRQ_TEST_1_PREPARE_TEST_SCENARIO",
-    "sid": "0x00002300",
+    "sid": "0x0000F0A0",
     "signal": "SPM_CORE_IRQ_TEST_1_PREPARE_TEST_SCENARIO_SIGNAL",
     "non_secure_clients": true,
     "minor_version": 1,
@@ -66,7 +66,7 @@
     },
     {
     "name": "SPM_CORE_IRQ_TEST_1_EXECUTE_TEST_SCENARIO",
-    "sid": "0x00002301",
+    "sid": "0x0000F0A1",
     "signal": "SPM_CORE_IRQ_TEST_1_EXECUTE_TEST_SCENARIO_SIGNAL",
     "non_secure_clients": true,
     "minor_version": 1,
