--- a/test/test_services/tfm_core_test/manifest.yaml
+++ b/test/test_services/tfm_core_test/manifest.yaml
@@ -50,7 +50,7 @@
   "services": [
     {
       "name": "SPM_CORE_TEST_INIT_SUCCESS",
-      "sid": "0x00002100",
+      "sid": "0x0000F020",
       "signal": "SPM_CORE_TEST_INIT_SUCCESS_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -58,7 +58,7 @@
     },
     {
       "name": "SPM_CORE_TEST_DIRECT_RECURSION",
-      "sid": "0x00002101",
+      "sid": "0x0000F021",
       "signal": "SPM_CORE_TEST_DIRECT_RECURSION_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -66,7 +66,7 @@
     },
     {
       "name": "SPM_CORE_TEST_MPU_ACCESS",
-      "sid": "0x00002102",
+      "sid": "0x0000F022",
       "signal": "SPM_CORE_TEST_MPU_ACCESS_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -74,7 +74,7 @@
     },
     {
       "name": "SPM_CORE_TEST_MEMORY_PERMISSIONS",
-      "sid": "0x00002103",
+      "sid": "0x0000F023",
       "signal": "SPM_CORE_TEST_MEMORY_PERMISSIONS_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -82,7 +82,7 @@
     },
     {
       "name": "SPM_CORE_TEST_SHARE_REDIRECTION",
-      "sid": "0x00002104",
+      "sid": "0x0000F024",
       "signal": "SPM_CORE_TEST_SHARE_REDIRECTION_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -90,7 +90,7 @@
     },
     {
       "name": "SPM_CORE_TEST_SS_TO_SS",
-      "sid": "0x00002105",
+      "sid": "0x0000F025",
       "signal": "SPM_CORE_TEST_SS_TO_SS_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -98,7 +98,7 @@
     },
     {
       "name": "SPM_CORE_TEST_SS_TO_SS_BUFFER",
-      "sid": "0x00002106",
+      "sid": "0x0000F026",
       "signal": "SPM_CORE_TEST_SS_TO_SS_BUFFER_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -106,7 +106,7 @@
     },
     {
       "name": "SPM_CORE_TEST_OUTVEC_WRITE",
-      "sid": "0x00002107",
+      "sid": "0x0000F027",
       "signal": "SPM_CORE_TEST_OUTVEC_WRITE_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -114,7 +114,7 @@
     },
     {
       "name": "SPM_CORE_TEST_PERIPHERAL_ACCESS",
-      "sid": "0x00002108",
+      "sid": "0x0000F028",
       "signal": "SPM_CORE_TEST_PERIPHERAL_ACCESS_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -122,7 +122,7 @@
     },
     {
       "name": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID",
-      "sid": "0x00002109",
+      "sid": "0x0000F029",
       "signal": "SPM_CORE_TEST_GET_CALLER_CLIENT_ID_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -130,7 +130,7 @@
     },
     {
       "name": "SPM_CORE_TEST_SPM_REQUEST",
-      "sid": "0x0000210A",
+      "sid": "0x0000F02A",
       "signal": "SPM_CORE_TEST_SPM_REQUEST_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -138,7 +138,7 @@
     },
     {
       "name": "SPM_CORE_TEST_BLOCK",
-      "sid": "0x0000210B",
+      "sid": "0x0000F02B",
       "signal": "SPM_CORE_TEST_BLOCK_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
@@ -146,7 +146,7 @@
     },
     {
       "name": "SPM_CORE_TEST_NS_THREAD",
-      "sid": "0x0000210C",
+      "sid": "0x0000F02C",
       "signal": "SPM_CORE_TEST_NS_THREAD_SIGNAL",
       "non_secure_clients": true,
       "minor_version": 1,
