--- a/secure_fw/services/tfm_service_list.inc.template
+++ b/secure_fw/services/tfm_service_list.inc.template
@@ -11,17 +11,19 @@
 #define __TFM_SERVICE_LIST_INC__
 
 {% for manifest in manifests %}
-    {% if manifest.attr.conditional %}
+    {% if manifest.manifest.tfm_partition_ipc %}
+        {% if manifest.attr.conditional %}
 #ifdef {{manifest.attr.conditional}}
-    {% endif %}
+        {% endif %}
 /******** {{manifest.manifest.name}} ********/
-    {% if manifest.manifest.services %}
-        {% for service in manifest.manifest.services %}
+        {% if manifest.manifest.services %}
+            {% for service in manifest.manifest.services %}
 {{'{'}}"{{service.name}}", {{manifest.manifest.name}}_ID, {{service.signal}}, {{service.sid}}, {{service.non_secure_clients}}, {{service.minor_version}}, TFM_VERSION_POLICY_{{service.minor_policy}}{{'}'}},
-        {% endfor %}
-    {% endif %}
-    {% if manifest.attr.conditional %}
+            {% endfor %}
+        {% endif %}
+        {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
+        {% endif %}
     {% endif %}
 
 {% endfor %}
