Core: Optional features supporting in manifest
Support two optional features 'minor_version' and 'minor_policy' in the
manifest, to fulfill the requirements of potential test cases for these
features.

Change-Id: Ib51192b7c46ea1f4eddd7c4dd222094a4385a9e2
Signed-off-by: Shawn Shan <shawn.shan@arm.com>

--- a/secure_fw/services/tfm_service_list.inc.template
+++ b/secure_fw/services/tfm_service_list.inc.template
@@ -16,12 +16,28 @@
 #ifdef {{manifest.attr.conditional}}
         {% endif %}
 /******** {{manifest.manifest.name}} ********/
-        {% if manifest.manifest.services %}
-            {% for service in manifest.manifest.services %}
-{{'{'}}"{{service.name}}", {{manifest.manifest.name}}_ID, {{service.signal}}, {{service.sid}}, {{service.non_secure_clients}}, {{service.minor_version}}, TFM_VERSION_POLICY_{{service.minor_policy}}{{'}'}},
-            {% endfor %}
-        {% endif %}
-        {% if manifest.attr.conditional %}
+    {% if manifest.manifest.services %}
+        {% for service in manifest.manifest.services %}
+{{'{'}}
+        "{{service.name}}",
+        {{manifest.manifest.name}}_ID,
+        {{service.signal}},
+        {{service.sid}},
+        {{service.non_secure_clients}},
+    {% if service.minor_version %}
+        {{service.minor_version}},
+    {% else %}
+        1,
+    {% endif %}
+    {% if service.minor_policy %}
+        TFM_VERSION_POLICY_{{service.minor_policy}}
+    {% else %}
+        TFM_VERSION_POLICY_STRICT
+    {% endif %}
+{{'}'}},
+        {% endfor %}
+    {% endif %}
+    {% if manifest.attr.conditional %}
 #endif /* {{manifest.attr.conditional}} */
         {% endif %}
     {% endif %}
