Build: Correct stack and heap size for secure storage
Change the stack size of secure storage from 0x2000 to
0x5000 to fix the bring up issue for isolation level 2.
And change its heap size to 0 for it is not used now.

Change-Id: I4c1dc7ace44364ed359afbe356077ab71105a3aa
Signed-off-by: Edison Ai <edison.ai@arm.com>

--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -11,8 +11,8 @@
   "priority": "NORMAL",
   "id": "0x00000100",
   "entry_point": "tfm_sst_req_mngr_init",
-  "stack_size": "0x2000",
-  "heap_size": "0x0400",
+  "stack_size": "0x5000",
+  "heap_size": "0",
   "tfm_partition_ipc": true,
   "secure_functions": [
     {
