Platform: IOCTL for platform-specific services
Introduce new API function in HAL and a new generic platform
service to provide the means for platforms to implement proprietary
functions using a uniform framework and a single secure entry point.

Change-Id: I72ddbb3342ae851fe9851ccb27a54c8f4322b01f
Signed-off-by: Miklos Balint <miklos.balint@arm.com>

--- a/secure_fw/services/platform/manifest.yaml
+++ b/secure_fw/services/platform/manifest.yaml
@@ -23,9 +23,9 @@
       "minor_policy": "strict"
     },
     {
-      "sfid": "TFM_SP_PLATFORM_PIN_SERVICE_SFID",
-      "signal": "TFM_SP_PLATFORM_PIN_SERVICE",
-      "tfm_symbol": "platform_sp_pin_service",
+      "sfid": "TFM_SP_PLATFORM_IOCTL_SFID",
+      "signal": "TFM_SP_PLATFORM_IOCTL",
+      "tfm_symbol": "platform_sp_ioctl",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
