Crypto: Implement additional PSA Crypto APIs
This patch implements additional missing APIs available
in the PSA Crypto API headers.

Change-Id: I453f6829ed2c87a47546514becda599ecd1273a4
Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>

--- a/secure_fw/services/crypto/manifest.yaml
+++ b/secure_fw/services/crypto/manifest.yaml
@@ -56,6 +56,22 @@
       "minor_policy": "strict"
     },
     {
+      "sfid": "TFM_CRYPTO_EXPORT_PUBLIC_KEY_SFID",
+      "signal": "TFM_CRYPTO_EXPORT_PUBLIC_KEY",
+      "tfm_symbol": "tfm_crypto_export_public_key",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_COPY_KEY_SFID",
+      "signal": "TFM_CRYPTO_COPY_KEY",
+      "tfm_symbol": "tfm_crypto_copy_key",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
       "sfid": "TFM_CRYPTO_SET_KEY_POLICY_SFID",
       "signal": "TFM_CRYPTO_SET_KEY_POLICY",
       "tfm_symbol": "tfm_crypto_set_key_policy",
@@ -75,6 +91,14 @@
       "sfid": "TFM_CRYPTO_GET_KEY_LIFETIME_SFID",
       "signal": "TFM_CRYPTO_GET_KEY_LIFETIME",
       "tfm_symbol": "tfm_crypto_get_key_lifetime",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_CIPHER_GENERATE_IV_SFID",
+      "signal": "TFM_CRYPTO_CIPHER_GENERATE_IV",
+      "tfm_symbol": "tfm_crypto_cipher_generate_iv",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
@@ -168,6 +192,14 @@
       "minor_policy": "strict"
     },
     {
+      "sfid": "TFM_CRYPTO_HASH_CLONE_SFID",
+      "signal": "TFM_CRYPTO_HASH_CLONE",
+      "tfm_symbol": "tfm_crypto_hash_clone",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
       "sfid": "TFM_CRYPTO_MAC_SIGN_SETUP_SFID",
       "signal": "TFM_CRYPTO_MAC_SIGN_SETUP",
       "tfm_symbol": "tfm_crypto_mac_sign_setup",
@@ -216,6 +248,14 @@
       "minor_policy": "strict"
     },
     {
+      "sfid": "TFM_CRYPTO_AEAD_ENCRYPT_SFID",
+      "signal": "TFM_CRYPTO_AEAD_ENCRYPT",
+      "tfm_symbol": "tfm_crypto_aead_encrypt",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
       "sfid": "TFM_CRYPTO_AEAD_DECRYPT_SFID",
       "signal": "TFM_CRYPTO_AEAD_DECRYPT",
       "tfm_symbol": "tfm_crypto_aead_decrypt",
@@ -224,9 +264,97 @@
       "minor_policy": "strict"
     },
     {
-      "sfid": "TFM_CRYPTO_AEAD_ENCRYPT_SFID",
-      "signal": "TFM_CRYPTO_AEAD_ENCRYPT",
-      "tfm_symbol": "tfm_crypto_aead_encrypt",
+      "sfid": "TFM_CRYPTO_ASYMMETRIC_SIGN_SFID",
+      "signal": "TFM_CRYPTO_ASYMMETRIC_SIGN",
+      "tfm_symbol": "tfm_crypto_asymmetric_sign",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_ASYMMETRIC_VERIFY_SFID",
+      "signal": "TFM_CRYPTO_ASYMMETRIC_VERIFY",
+      "tfm_symbol": "tfm_crypto_asymmetric_verify",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_ASYMMETRIC_ENCRYPT_SFID",
+      "signal": "TFM_CRYPTO_ASYMMETRIC_ENCRYPT",
+      "tfm_symbol": "tfm_crypto_asymmetric_encrypt",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_ASYMMETRIC_DECRYPT_SFID",
+      "signal": "TFM_CRYPTO_ASYMMETRIC_DECRYPT",
+      "tfm_symbol": "tfm_crypto_asymmetric_decrypt",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_GET_GENERATOR_CAPACITY_SFID",
+      "signal": "TFM_CRYPTO_GET_GENERATOR_CAPACITY",
+      "tfm_symbol": "tfm_crypto_get_generator_capacity",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_GENERATOR_READ_SFID",
+      "signal": "TFM_CRYPTO_GENERATOR_READ",
+      "tfm_symbol": "tfm_crypto_generator_read",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_GENERATOR_IMPORT_KEY_SFID",
+      "signal": "TFM_CRYPTO_GENERATOR_IMPORT_KEY",
+      "tfm_symbol": "tfm_crypto_generator_import_key",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_GENERATOR_ABORT_SFID",
+      "signal": "TFM_CRYPTO_GENERATOR_ABORT",
+      "tfm_symbol": "tfm_crypto_generator_abort",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_KEY_DERIVATION_SFID",
+      "signal": "TFM_CRYPTO_KEY_DERIVATION",
+      "tfm_symbol": "tfm_crypto_key_derivation",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_KEY_AGREEMENT_SFID",
+      "signal": "TFM_CRYPTO_KEY_AGREEMENT",
+      "tfm_symbol": "tfm_crypto_key_agreement",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_GENERATE_RANDOM_SFID",
+      "signal": "TFM_CRYPTO_GENERATE_RANDOM",
+      "tfm_symbol": "tfm_crypto_generate_random",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_GENERATE_KEY_SFID",
+      "signal": "TFM_CRYPTO_GENERATE_KEY",
+      "tfm_symbol": "tfm_crypto_generate_key",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
@@ -251,6 +379,8 @@
     "crypto_engine.c",
     "crypto_mac.c",
     "crypto_aead.c",
+    "crypto_asymmetric.c",
+    "crypto_generator.c"
   ],
   "tfm_linker_pattern": {
     "library_list": [
