Platform: Fix LVL2 IPC test runtime error
The test service will be built as one library named
"libtfm_secure_tests.a". It will cause GNUARM unable to find the
related file of IPC test client and service partitions by using
'library_list' linker pattern. So change the linker pattern type
to 'object_list'.

Change-Id: Ibaf45079caff5810646904cd3cfe02302edd428f
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
+++ b/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
@@ -20,8 +20,8 @@
     "ipc_client_test.c",
   ],
   "tfm_linker_pattern": {
-    "library_list": [
-      "*ipc_client_test*"
+    "object_list": [
+      "*ipc_client_test.*"
     ]
   }
 }
