Attest: Crypto service binding
Refactor initial attestation key handling and replace
crypto stub functions with calls to Crypto service to
sign properly the initial attestation token.

Change-Id: I1cdd331769b0e631d08e96f8d15a2f5a59a51a1e
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/lib/t_cose/CMakeLists.txt
+++ b/lib/t_cose/CMakeLists.txt
@@ -40,6 +40,7 @@ list(APPEND ALL_SRC_C_VERIFY
 #Setting include directories
 embedded_include_directories(PATH ${T_COSE_DIR}/inc ABSOLUTE)
 embedded_target_include_directories(TARGET tfm_t_cose_verify PATH ${TFM_ROOT_DIR}/lib/ext/qcbor/util ABSOLUTE APPEND)
+embedded_target_include_directories(TARGET tfm_t_cose_verify PATH ${TFM_ROOT_DIR}/test/suites/attestation ABSOLUTE APPEND)
 embedded_target_include_directories(TARGET tfm_t_cose_sign   PATH ${TFM_ROOT_DIR}/platform/include ABSOLUTE APPEND)
 
 #Specify what we build (t_cose_sign and t_cose_verify build as an object library)
