Doc: add design proposal process documentation.
Add new document section for processes and new document describing the
design proposal process.

Added CMake support for status handling of design documents.
Improved update process (dependency handling) of Sphinx documentation.
Fixed issue where the intermediate document files from the build
directory were added to Sphinx output if the build directory was placed
under TF-M root directory.

Change-Id: Ie21abe120ffcb5f0a79ddf1c398eb198959878f3
Signed-off-by: Gyorgy Szing <Gyorgy.Szing@arm.com>

--- a/docs/index.rst.in
+++ b/docs/index.rst.in
@@ -3,8 +3,11 @@
 ..
    The build-system will copy all documents into a temporary directory tree
    before the documentation is built.
-   This fill will be copied to the top level and thus please use relative paths
+   This file will be copied to the top level and thus please use relative paths
    as if this file would be in <TFM_ROOT_DIR>.
+   
+   The values between @ characters will be filled in by CMake.
+
 
 Welcome to TF-M's documentation!
 ================================
@@ -26,6 +29,14 @@ Welcome to TF-M's documentation!
     docs/user_guides/tfm_integration_guide
     docs/user_guides/tfm_ns_client_identification
     docs/user_guides/tfm_secure_boot
+
+.. toctree::
+    :maxdepth: 2
+    :caption: Processes
+    :glob:
+    :hidden:
+
+    docs/processes/**
 
 .. toctree::
     :maxdepth: 2
@@ -57,7 +68,7 @@ Welcome to TF-M's documentation!
     :glob:
     :hidden:
 
-    docs/design_documents/*
+    @ACCEPTED_DD_LIST@
 
 .. toctree::
     :caption: Draft design documents
@@ -65,7 +76,7 @@ Welcome to TF-M's documentation!
     :glob:
     :hidden:
 
-    docs/design_documents/drafts/*
+    @DRAFT_DD_LIST@
 
 .. toctree::
     :caption: Rejected design documents
@@ -73,7 +84,7 @@ Welcome to TF-M's documentation!
     :glob:
     :hidden:
 
-    docs/design_documents/rejected/*
+    @REJECTED_DD_LIST@
 
 .. include:: readme.rst
 
