--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -11,7 +11,7 @@
   "priority": "NORMAL",
   "id": "0x00000103",
   "entry_point": "attest_init",
-  "stack_size": "0x0400",
+  "stack_size": "0x0A00",
   "heap_size": "0x0400",
   "tfm_init_symbol": "attest_init",
   "secure_functions": [
